# atmsamr35-bootloader-example

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  mbedtls_config.h
ASF/: CMakeLists.txt  GlobalStartup.c  GlobalStartup.h  asf-mini.h  asf.h
ASF/atmel/CMSIS-Core/Include/: cmsis_compiler.h
ASF/common/utils/: interrupt.h
ASF/config/: conf_sio2host.h
ASF/sam0/drivers/extint/: extint_callback.c_old
ASF/sam0/drivers/sercom/i2c/i2c_sam0/: i2c_master.c
ASF/sam0/utils/: compiler.h
ASF/sam0/utils/cmsis/samr35/source/gcc/: startup_samr35.c
app/: CMakeLists.txt  main.c  main.cpp
boot/: CMakeLists.txt  load_app.c  load_app.h  main.c  memory_map_api.h  print_array.h  update.c  update.h  utils.h  verify.c  verify.h
boot/lora/: micro-driver-sx1276.c  micro-driver-sx1276.h
cmake/: bin-to-array.py  binutils-arm-none-eabi.cmake  create_key.py  create_key_two.py  gdb-helper.cmake  openocd-run.gdb.in  openocd-script.cfg  patch_image_header.py  patch_image_header_init.py  toolchain-arm-none-eabi.cmake  upload.cmake
framework/: CMakeLists.txt  flash.c  flash.h  image.c  image.h  memory_map_api.h  print_array.c  print_array.h  rtc_api.c  rtc_api.h  sha256.c  shared_memory.c  shared_memory.h  shared_ram.c
framework/lora/: micro-driver-sx1276.h  micro-sx1276-registers.h
keys/DEBUG/: keys.c  keys.h  public.txt
keys/DEBUG - working/: keys.c  keys.h  private.txt
linker/: application.ld  bootloader.ld  memory-mappings-j17.ld  samr35j17.ld
updater/: CMakeLists.txt  app_firmware_1_auto_gen.h  app_firmware_auto_gen.h  main.cpp
